# dk-scraper

./: .env.example  .gitignore  README.md  orchestrator.py  pyproject.toml  requirements.txt
draftkings_scraper/: constants.py  http_handler.py
draftkings_scraper/contest_entries/: __init__.py  scraper.py
draftkings_scraper/contest_entry_history/: __init__.py  scraper.py
draftkings_scraper/contests/: __init__.py  scraper.py
draftkings_scraper/draft_groups/: __init__.py  scraper.py
draftkings_scraper/game_sets/: __init__.py  scraper.py
draftkings_scraper/game_types/: __init__.py  scraper.py
draftkings_scraper/payout/: __init__.py  scraper.py
draftkings_scraper/player_salary/: __init__.py  scraper.py
draftkings_scraper/schemas/: __init__.py  contest.py  contest_history.py  contests.py  draft_groups.py  game_sets.py  game_types.py  payout.py  player_results.py  player_salary.py  sport.py
draftkings_scraper/sport/: __init__.py  scraper.py
draftkings_scraper/utils/: __init__.py  contest_adder.py  helpers.py  payout.py
sql_processing/: db_cleanup.py  postgres_process.py  queries.py
