[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draftkings_scraper"
version = "1.0.0"
authors = [
    {name = "Gabe Garrido", email = "gabriel.garrido28@gmail.com"},
]
description = "Modular DraftKings scraper for fantasy sports data."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.29.0",
    "beautifulsoup4>=4.11.1",
    "marshmallow>=3.20.0",
    "pytz>=2023.3",
    "python-dotenv>=1.0.0",
    "selenium>=3.141.0",
    "webdriver-manager>=3.8.6",
    "tqdm>=4.67.1",
]

[project.urls]
"Homepage" = "https://github.com/GGarrido28/draftkings-scraper"

[tool.setuptools.packages.find]
where = ["."]
include = ["draftkings_scraper*"]